syntax = "proto3";
package crm;
import "google/protobuf/timestamp.proto";

message WelcomeRequest {
    string id = 1;
    // interval for registered time(say 7 is registered 7 days ago)
    uint32 interval = 2;
    repeated uint32 content_ids = 3;
}

message WelcomeResponse {
    string id = 1;
}

message RecallRequest {
    string id = 1;
    uint32 last_visit_interval = 2;
    repeated uint32 content_ids = 3;
}

message RecallResponse {
    uint32 id = 1;
}

message RemindRequest {
    string id = 1;
    uint32 last_visit_interval = 2;
    uint32 last_watched_interval = 3;
    repeated uint32 content_ids = 4;
}

message RemindResponse {
    string id = 1;
    uint32 interval = 2;
}
